# Playdate-Breakout

./: .gitignore  CMakeLists.txt  README.md
Source/include/: game.h
Source/src/: game.c  main.c
Source/tests/: CMakeLists.txt  test_game.c
docs/: breakout-gdd.md  breakout-project-plan.md
